--- a/src/components/game-card/game-card.scss
+++ b/src/components/game-card/game-card.scss
@@ -1,18 +1,37 @@
-.card-image {
-    width: 300px;
-    height: 300px;
-    object-fit: cover;
-  }
+@import '~bootstrap/scss/bootstrap.scss';
 
-  .game-card {
-    font-family: 'Quicksand', sans-serif;
-    box-shadow: 0px 0px 10px #D38FDE;
-    border-radius: 40px;
-    
-  }
+
+.card-image {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+}
+
+.game-card {
+  font-family: 'Quicksand', sans-serif;
+  box-shadow: 0px 0px 10px #D38FDE;
+  border-radius: 40px;
+
+}
 
 .open-button {
   font-family: 'Quicksand', sans-serif;
 }
 
-@import '~bootstrap/scss/bootstrap.scss';
+
+
+@media all and (max-width: 576px) {
+  .card-title {
+    font-size: 1.4rem;
+  }
+
+  .card-image {
+    height: 350px;
+    object-fit: cover;
+  }
+
+  .open-button {
+    font-size: 1.2rem;
+  }
+
+}
