--- a/src/components/game-view/game-view.scss
+++ b/src/components/game-view/game-view.scss
@@ -9,33 +9,62 @@
   color: "white"
 }
 
-  .img {
-    max-height: 430px;
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* This maintains aspect ratio and fills the container */
-    border-radius: 40px;
+.img {
+  max-height: 430px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* This maintains aspect ratio and fills the container */
+  border-radius: 40px;
+}
+
+.game-title {
+  font-family: 'Lilita One', cursive;
+  color: white;
+  font-size: 2.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 30px;
+}
+
+.description,
+.genre,
+.year,
+.platform,
+.developer {
+  color: white;
+  font-size: 1.2rem;
+  padding-bottom: 15px;
+}
+
+.description {
+  padding-top: 35px;
+}
+
+
+.title {
+  font-size: 6rem;
+}
+
+
+
+/* small breakpoint: 576px */
+
+/* small breakpoint: 576px */
+
+@media all and (max-width: 576px) {
+  .game-view {
+    font-size: 1.4rem;
   }
 
-  .game-title {
-    font-family: 'Lilita One', cursive;
-    color: white;
-    font-size: 2.2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 30px;
-  }
+  body {
+    padding-left: 40px;
+    padding-right: 40px;
+}
 
-  .description, .genre, .year, .platform, .developer {
-    color: white;
-    font-size: 1.2rem;
-    padding-bottom: 15px;
-  }
+.title {
+    font-size: 4.2rem;
+}
 
-  .description {
-    padding-top: 35px;
-  }
-
-
-  /* small breakpoint: 576px */
+}
