--- a/src/components/main-view/main-view.scss
+++ b/src/components/main-view/main-view.scss
@@ -1,6 +1,5 @@
 h1 {
     font-family: 'Lilita One', cursive;
-    text-shadow: 2px 4px 4px #C5EDF2;
 
 }
 
@@ -18,6 +17,23 @@ h1 {
 }
 
 
+
+
+@media all and (max-width: 991px) {
+    .title {
+        font-size: 5rem;
+    }
+
+}
+
+@media all and (max-width: 770px) {
+    .title {
+        font-size: 4rem;
+    }
+
+}
+
+
 /* small breakpoint: 576px */
 
 @media all and (max-width: 576px) {
@@ -28,13 +44,23 @@ h1 {
     }
 
     .title {
-        font-size: 4.2rem;
+        font-size: 3.2rem;
     }
 
     .p-content {
         font-size: 1.4rem;
     }
+
+
 }
+
+
+@media all and (max-width: 425px) {
+    .title {
+        font-size: 2rem;
+    }
+}
+
 
 
 @import '~bootstrap/scss/bootstrap.scss';
